finished traffic sign

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -574,6 +574,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![architecture](cnn.svg)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
