--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -577,7 +577,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![architecture](cnn.svg)"
+    "![architecture](cnn.png)"
    ]
   },
   {
